# projgen-tool

./: README.md  pyproject.toml
flaskey_setdev/: cli.py  generator.py
flaskey_setdev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
