[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flaskey_setdev"
version = "0.1.5"
description = "CLI tool to generate modern Flask projects"
readme = "README.md"
authors = [{name="Samarth Patil"}]
requires-python = ">=3.7"

[project.scripts]
create-project = "flaskey_setdev.cli:main"

[tool.setuptools.packages.find]
where = ["."]